--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,25 @@
+:root {
+  --main-bg-color: #fbfaf8;
+  --secondary-bg-color: #f0ece5;
+  --dark-bg-color: #292929;
+  --secondary-dark-bg-color: #141414;
+  --accent-color-1: #fea82f;
+  --accent-color-2: #ff5e5b;
+  --accent-color-3: #5448c8;
+}
 @font-face {
   font-family: Figno;
   src: url('./assets/fonts/Figno-Regular.otf');
 }
+@font-face {
+  font-family: Rubik;
+  src: url('./assets/fonts/Rubik-VariableFont_wght.ttf');
+}
 body {
   font-size: 1.5rem;
-  background-color: #fbfaf8;
-  font-family: Figno;
+  background-color: var(--dark-bg-color);
+  color: var(--main-bg-color);
+  font-family: 'Rubik';
 }
 
 h1 {
@@ -13,9 +27,10 @@ h1 {
 }
 
 nav {
+  background-color: var(--secondary-dark-bg-color);
+  font-family: Figno;
   height: 100px;
   padding: 15px 30px;
-  background-color: #313638;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -27,5 +42,53 @@ nav > h1 {
 }
 
 nav > h1::before {
-  content: ' 📄 ';
+  content: '📄';
+}
+
+.main {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+
+/* Form */
+form {
+  background-color: var(--main-bg-color);
+  color: var(--secondary-dark-bg-color);
+  width: 80%;
+  margin: 30px 0;
+  padding: 30px;
+  border-radius: 15px;
+}
+
+form fieldset {
+  padding: 5px;
+}
+
+form fieldset legend {
+  font-size: 2rem;
+  font-weight: bold;
+}
+
+/* Select Labels & Input Fields */
+form fieldset > legend + div {
+  margin-top: 30px;
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+}
+
+label {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+input {
+  font: inherit;
+  font-size: 1.8rem;
+  padding: 10px;
+  border-radius: 10px;
+  border: none;
+  outline: 2px solid gray;
 }
