--- a/src/App.css
+++ b/src/App.css
@@ -56,7 +56,7 @@ nav > h1::before {
 form {
   background-color: var(--main-bg-color);
   color: var(--secondary-dark-bg-color);
-  width: 80%;
+  width: 50%;
   margin: 30px 0;
   padding: 30px;
   border-radius: 15px;
@@ -79,16 +79,29 @@ form fieldset > legend + div {
   gap: 30px;
 }
 
-label {
+form label {
   display: flex;
   flex-direction: column;
   gap: 10px;
+  width: 100%;
 }
-input {
+input,
+textarea {
   font: inherit;
   font-size: 1.8rem;
   padding: 10px;
   border-radius: 10px;
   border: none;
   outline: 2px solid gray;
+}
+input:invalid {
+  outline-color: red;
+}
+
+@media only screen and (max-width: 767px) {
+  form {
+    width: 100%;
+    padding: 30px 15px;
+    margin: 15px 0;
+  }
 }
