--- a/src/App.css
+++ b/src/App.css
@@ -4,8 +4,8 @@
   --dark-bg-color: #292929;
   --secondary-dark-bg-color: #141414;
   --accent-color-1: #fea82f;
-  --accent-color-2: #ff5e5b;
-  --accent-color-3: #5448c8;
+  --accent-color-2: #ca2320;
+  --accent-color-3: #4636d2;
 }
 @font-face {
   font-family: Figno;
@@ -105,6 +105,42 @@ input:invalid {
 
 input:invalid + span {
   display: inline;
+}
+form input[type='date'] {
+  cursor: pointer;
+}
+
+form .btnGroup button {
+  width: 100%;
+  height: 50px;
+  font: inherit;
+  font-weight: 800;
+  background: none;
+  color: white;
+  border-radius: 30px;
+  margin-top: 15px;
+  transition: 0.1s;
+  cursor: pointer;
+}
+form .btnGroup button:hover {
+  transition: 0.1s;
+}
+
+form .btnGroup button.add {
+  color: var(--accent-color-3);
+  border: 2px solid var(--accent-color-3);
+}
+form .btnGroup button.add:hover {
+  background-color: var(--accent-color-3);
+  color: white;
+}
+form .btnGroup button.remove {
+  color: var(--accent-color-2);
+  border: 2px solid var(--accent-color-2);
+}
+form .btnGroup button.remove:hover {
+  background-color: var(--accent-color-2);
+  color: white;
 }
 
 @media only screen and (max-width: 767px) {
