--- a/src/App.css
+++ b/src/App.css
@@ -30,12 +30,11 @@ h1 {
 nav {
   background-color: var(--secondary-dark-bg-color);
   font-family: Figno;
-  height: 100px;
-  padding: 15px 30px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+  height: 50px;
+  padding: 15px 0;
   text-align: center;
+  width: 100%;
+  top: 0;
 }
 nav > h1 {
   color: #fbfaf8;
