--- a/src/CV.css
+++ b/src/CV.css
@@ -1,10 +1,60 @@
 .CV {
-  width: 100%;
+  /* US Letter Size */
+  width: 8.5in;
+  height: 11in;
+  margin: 30px auto;
+  padding: 0.3in;
+  box-sizing: border-box;
   background-color: white;
-  color: black;
+  color: rgb(27, 34, 88);
+  font-family: 'Open Sans', sans-serif;
+  font-size: 12pt;
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
 }
-.CV header {
-  padding: 15px;
-  background-color: rgb(27, 34, 88);
+
+::selection {
+  background: rgb(27, 34, 88);
   color: white;
+}
+
+.CV p {
+  font-weight: normal;
+}
+
+.CV header {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 15px;
+  text-align: center;
+  border-bottom: 5px solid rgb(27, 34, 88);
+  padding-bottom: 20px;
+}
+.CV header div > h1 {
+  font-weight: 800;
+  text-transform: uppercase;
+}
+.CV header h2 {
+  font-weight: bold;
+  font-size: 1rem;
+  margin-left: 5px;
+  margin-top: 5px;
+}
+.CV header h3 {
+  font-weight: bold;
+}
+.CV header .contactInfo {
+  display: flex;
+  gap: 15px;
+}
+
+.CV main p {
+  line-height: 1.5;
+}
+.CV aside {
+  overflow: hidden;
+  grid-area: aside;
+  /* overflow-wrap: break-word; */
 }
