--- a/src/App.css
+++ b/src/App.css
@@ -18,7 +18,7 @@
 }
 @font-face {
   font-family: 'Open Sans';
-  src: url('./assets/fonts/OpenSans-VariableFont_wdth\,wght.ttf');
+  src: url('./assets/fonts/OpenSans.ttf');
 }
 body {
   font-size: 1.5rem;
