--- a/src/CV.css
+++ b/src/CV.css
@@ -23,6 +23,10 @@
   font-weight: normal;
 }
 
+.CV h3 {
+  font-weight: bold;
+}
+
 .CV header {
   display: flex;
   flex-direction: column;
@@ -42,12 +46,17 @@
   margin-left: 5px;
   margin-top: 5px;
 }
-.CV header h3 {
-  font-weight: bold;
-}
+
 .CV header .contactInfo {
   display: flex;
   gap: 15px;
+}
+
+.CV main {
+  margin-top: 30px;
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
 }
 
 .CV main p {
@@ -55,5 +64,22 @@
 }
 
 .CV main h2 {
-  margin-bottom: 8px;
+  margin-bottom: 16px;
+  font-size: 1.5rem;
+}
+
+.CV main .experience > div {
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+}
+
+.CV main .experience > div > div {
+  display: grid;
+  grid-template-columns: 3fr 1fr;
+  column-gap: 30px;
+}
+
+.CV main .experience h3 {
+  margin-bottom: 5px;
 }
