--- a/src/App.css
+++ b/src/App.css
@@ -169,10 +169,10 @@ form button.remove:hover {
   color: white;
 }
 form button.submit,
-form button.clear {
+form button.clear,
+form button.reset {
   border: 2px solid black;
   height: 80px;
-  margin-top: 50px;
   border-radius: 50px;
   font-size: 1.8rem;
 }
@@ -185,6 +185,15 @@ form button.clear:hover {
   color: white;
   background-color: var(--accent-color-2);
 }
+form button.reset {
+  height: 50px;
+  color: var(--accent-color-1);
+  border-color: var(--accent-color-1);
+}
+form button.reset:hover {
+  color: white;
+  background-color: var(--accent-color-1);
+}
 form button.submit {
   color: var(--accent-color-4);
   border-color: var(--accent-color-4);
@@ -192,6 +201,13 @@ form button.submit {
 form button.submit:hover {
   color: white;
   background-color: var(--accent-color-4);
+}
+
+form .btnGroup {
+  margin-top: 50px;
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
 }
 
 @media only screen and (max-width: 767px) {
