--- a/src/App.css
+++ b/src/App.css
@@ -132,7 +132,7 @@ form input[type='date'] {
   cursor: pointer;
 }
 
-form button {
+button {
   width: 100%;
   height: 50px;
   font: inherit;
@@ -144,7 +144,7 @@ form button {
   transition: 0.1s;
   cursor: pointer;
 }
-form button:hover {
+button:hover {
   transition: 0.1s;
 }
 
@@ -168,6 +168,8 @@ form button.remove:hover {
   background-color: var(--accent-color-2);
   color: white;
 }
+button.print,
+button.edit,
 form button.submit,
 form button.clear,
 form button.reset {
@@ -185,19 +187,23 @@ form button.clear:hover {
   color: white;
   background-color: var(--accent-color-2);
 }
+button.edit,
 form button.reset {
   height: 50px;
   color: var(--accent-color-1);
   border-color: var(--accent-color-1);
 }
+button.edit:hover,
 form button.reset:hover {
   color: white;
   background-color: var(--accent-color-1);
 }
+button.print,
 form button.submit {
   color: var(--accent-color-4);
   border-color: var(--accent-color-4);
 }
+button.print:hover,
 form button.submit:hover {
   color: white;
   background-color: var(--accent-color-4);
@@ -208,6 +214,33 @@ form .btnGroup {
   display: flex;
   flex-direction: column;
   gap: 30px;
+}
+
+.printPage {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.printPage .CV {
+  margin: 30px;
+}
+
+.printPage > .printGroup {
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+  /* justify-content: center;
+  align-items: center; */
+}
+
+.printPage button {
+  height: 80px;
+  width: 350px;
+  background-color: white;
+}
+.printPage button.print:hover {
+  background-color: var(--accent-color-4);
 }
 
 @media only screen and (max-width: 767px) {
